# SignalForge

./: .gitignore  GITHUB_PAGES_SETUP.md  PERFORMANCE_IMPROVEMENTS.md  README-Cherry-Studio.md  README-MCP-FAQ.md  README.md  README_NEWS_SOURCES.md  check_news_sources.py  check_sources_health.py  fetch_english_news.py  health_report.json  index.html  main.py  pyproject.toml  setup-mac.sh  setup-windows.bat  sources.json  start-http.bat  start-http.sh
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-config-help.yml
.github/workflows/: check-sources.yml  crawler.yml  docker.yml  pages.yml
config/: config.yaml  frequency_words.txt
docker/: docker-compose.yml  manage.py
mcp_server/: __init__.py  config.py  logging_config.py  server.py
mcp_server/services/: __init__.py  cache_service.py  data_service.py  parser_service.py
mcp_server/tools/: __init__.py  analytics.py  config_mgmt.py  data_query.py  search_tools.py  system.py
mcp_server/utils/: __init__.py  date_parser.py  errors.py  validators.py
